removed invalid reference

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>React </li> 
         </ul>
     </ul>
-    <a href="C:\Users\priyansh\Documents\Web development - Arvind\HTML - website\Hobbie.html">Hobbies</a> 
+    <a href="Hobbie.html">Hobbies</a> 
     <a href="Experience.html"> Experience</a>
     <a href="Skills.html">Skills</a>
     <a href="Forms.html">Forms</a>
