--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💼 Arvind's Portfolio </title>
 </head>
-<body>
+<body style="background-color: blue;">
         <h1>Arvind's Portfolio </h1>
-    <p>
+    <p>style="background-color: blue;"
         <b>Address:</b> 
         <em>Newcastle upon Tyne </em> 
         <strong> United Kingdom</strong>
